...
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnListFavori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:contentDescription="Bouton des favoris"
                app:srcCompat="@drawable/coeur_gris"
                tools:ignore="TouchTargetSizeCheck" />
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtListPublishedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/txtListTitle"
...
