...
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:text="les formations"
                android:textSize="34sp" />

            <ImageButton
                android:id="@+id/btnFormations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:contentDescription="Bouton des formations"
                android:scaleType="centerInside"
...
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:text="mes favoris"
                android:textSize="34sp" />

            <ImageButton
                android:id="@+id/btnFavoris"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:contentDescription="Bouton des favoris"
                android:scaleType="centerInside"
...
